force-app/main/default/objects/InformcoesFinanceirasConta__c/InformcoesFinanceirasConta__c.object-meta.xml
<CustomObject>
    <label>Informações financeiras da conta</label>
    <nameField>
        <label>Informações financeiras da conta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informações financeiras da conta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>