force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/ContaRelacionada__c.field-meta.xml
<CustomField>
    <fullName>ContaRelacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informações financeiras da conta</relationshipLabel>
    <relationshipName>InformacoesFinanceirasConta</relationshipName>
    <type>Lookup</type>
</CustomField>