force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/DataAdmissao__c.field-meta.xml
<CustomField>
    <fullName>DataAdmissao__c</fullName>
    <label>Data de admissão</label>
    <type>Date</type>
</CustomField>