force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <inlineHelpText>Informar CPF para pessoa física ou CNPJ pessoa jurídica</inlineHelpText>
    <label>Documento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>