force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casado(a)</fullName>
            </value>
            <value>
                <fullName>Divorciado(a)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Separado(a)</fullName>
            </value>
            <value>
                <fullName>Solteiro(a)</fullName>
            </value>
            <value>
                <fullName>União estável</fullName>
            </value>
            <value>
                <fullName>Viúvo(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>