force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/InstituicaoFinaneira__c.field-meta.xml
<CustomField>
    <fullName>InstituicaoFinaneira__c</fullName>
    <label>Instituição Financeira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>001</fullName>
                <label>001-Banco do Brasil S.A.</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003-Banco da Amazônia S.A.</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>004-Banco do Nordeste do Brasil S.A.</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>007-Banco Nacional de Desenvolvimento Econômico e Social - BNDES</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>012-Banco Inbursa S.A.</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>014-State Street Brasil S.A. - Banco Comercial</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>017-BNY Mellon Banco S.A.</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>021-BANESTES S.A. Banco do Estado do Espírito Santo</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>024-Banco BANDEPE S.A.</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>025-Banco Alfa S.A.</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>029-Banco Itaú Consignado S.A.</label>
            </value>
            <value>
                <fullName>033</fullName>
                <label>033-Banco Santander (Brasil) S.A.</label>
            </value>
            <value>
                <fullName>036</fullName>
                <label>036-Banco Bradesco BBI S.A.</label>
            </value>
            <value>
                <fullName>037</fullName>
                <label>037-Banco do Estado do Pará S.A.</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>040-Banco Cargill S.A.</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>041-Banco do Estado do Rio Grande do Sul S.A.</label>
            </value>
            <value>
                <fullName>047</fullName>
                <label>047-Banco do Estado de Sergipe S.A.</label>
            </value>
            <value>
                <fullName>062</fullName>
                <label>062-Hipercard Banco Múltiplo S.A.</label>
            </value>
            <value>
                <fullName>063</fullName>
                <label>063-Banco Bradescard S.A.</label>
            </value>
            <value>
                <fullName>065</fullName>
                <label>065-Banco Andbank (Brasil) S.A.</label>
            </value>
            <value>
                <fullName>066</fullName>
                <label>066-Banco Morgan Stanley S.A.</label>
            </value>
            <value>
                <fullName>070</fullName>
                <label>070-BRB - Banco de Brasília S.A.</label>
            </value>
            <value>
                <fullName>074</fullName>
                <label>074-Banco J. Safra S.A.</label>
            </value>
            <value>
                <fullName>077</fullName>
                <label>077-Banco Inter S.A.</label>
            </value>
            <value>
                <fullName>082</fullName>
                <label>082-Banco Topázio S.A.</label>
            </value>
            <value>
                <fullName>083</fullName>
                <label>083-Banco da China Brasil S.A.</label>
            </value>
            <value>
                <fullName>084</fullName>
                <label>084-Sisprime do Brasil</label>
            </value>
            <value>
                <fullName>094</fullName>
                <label>094-Banco Finaxis S.A.</label>
            </value>
            <value>
                <fullName>095</fullName>
                <label>095-Travelex Banco de Câmbio S.A.</label>
            </value>
            <value>
                <fullName>096</fullName>
                <label>096-Banco B3 S.A.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>