force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/LeadConvertido__c.field-meta.xml
<CustomField>
    <fullName>LeadConvertido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de controle para atribuir somente os Dados bancários relacionados ao Lead convertido na Oportunidade criada durante a conversão.</description>
    <label>Lead convertido</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Informações financeiras da conta</relationshipLabel>
    <relationshipName>InformacoesFinanceirasConta</relationshipName>
    <type>Lookup</type>
</CustomField>