force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidade__c</fullName>
    <label>Nacionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brasileira</fullName>
            </value>
            <value>
                <fullName>Estrangeira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>