force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>