force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/OrigemRenda__c.field-meta.xml
<CustomField>
    <fullName>OrigemRenda__c</fullName>
    <label>Origem da renda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assalariado</fullName>
            </value>
            <value>
                <fullName>Aposentado</fullName>
            </value>
            <value>
                <fullName>Sócio</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Autônomo</fullName>
            </value>
            <value>
                <fullName>Profissional liberal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>