force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/PercentualInvestimento__c.field-meta.xml
<CustomField>
    <fullName>PercentualInvestimento__c</fullName>
    <label>% de investimento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>