force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/TempoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>TempoEmpresa__c</fullName>
    <formula>(Today() -  DataAdmissao__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tempo em anos</inlineHelpText>
    <label>Tempo de empresa</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>