force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/TipoConta__c.field-meta.xml
<CustomField>
    <fullName>TipoConta__c</fullName>
    <label>Tipo da conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>