force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/TipoRenda__c.field-meta.xml
<CustomField>
    <fullName>TipoRenda__c</fullName>
    <label>Tipo da renda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>