force-app/main/default/objects/InformcoesFinanceirasConta__c/fields/TipoTransacao__c.field-meta.xml
<CustomField>
    <fullName>TipoTransacao__c</fullName>
    <label>Tipo de transação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>