force-app/main/default/objects/InformcoesFinanceirasConta__c/recordTypes/CadastrarRenda.recordType-meta.xml
<RecordType>
    <fullName>CadastrarRenda</fullName>
    <active>true</active>
    <description>Cadastro de renda principal e complementar relacionado à conta e possíveis negociações.</description>
    <label>Cadastrar Renda</label>
</RecordType>