force-app/main/default/objects/InformcoesFinanceirasConta__c/recordTypes/DadoBancario.recordType-meta.xml
<RecordType>
    <fullName>DadoBancario</fullName>
    <active>true</active>
    <description>Cadastro de dados bancários relacionadas à conta.</description>
    <label>Dado bancário</label>
</RecordType>